Fix signature spacing - #526

--- a/imports/stylus/composer.styl
+++ b/imports/stylus/composer.styl
@@ -135,4 +135,13 @@
       height: 450px;
     }
   }
+
+  .signature {
+    padding: 5px 20px;
+    font-size: 11px;
+
+    p {
+      margin: 0;
+    }
+  }
 }
